# chez_marietou

./: .gitignore  README.md
backend-python/app/: catalogue.py  ia.py  main.py  paiement.py
backend-rust/: Cargo.toml
backend-rust/src/: auth.rs  main.rs  models.rs  security.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AvisClients.tsx  CarteProduit.tsx  ChatIA.tsx  Hero3D.tsx  ModNuit.tsx  Navbar.tsx  Notifications.tsx  Particules.tsx  SelecteurTheme.tsx
frontend/src/pages/: Accueil.tsx  Boutique.tsx
frontend/src/pages/admin/: Dashboard.tsx
